--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,18 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.6603916422173!2d-73.8548257!3d40.72897900000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25e30124c5a39%3A0x5bbbcbdb33f4a72d!2sTower+Diner!5e0!3m2!1sen!2sus!4v1550634833651" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <form class="test" action="index.html" method="post">
+    <label for="fullname">Name</label>
+    <input id="fullname" type="text" name="fullname" value="" placeholder="your name">
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" value="" placeholder="your email">
+    <label for="tel">Tel. number</label>
+    <input id="tel" type="tel" name="telephone" value="" placeholder="your number">
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="1"></textarea>
+    <input type="submit" name="" value="send">
+  </form>
 </body>
 </html>
